--- a/AndUn7z/AndroidManifest.xml
+++ b/AndUn7z/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.hu.andun7z.MainActivity"
+            android:name="com.rock.jnitest.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
